--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base44-app",
+  "name": "cultivation-local-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,12 @@
     "lint": "eslint . --quiet",
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc -p ./jsconfig.json",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron": "electron .",
+    "electron:dev": "concurrently -k \"vite\" \"wait-on tcp:5173 && electron .\"",
+    "electron:dist": "npm run build && electron ."
   },
   "dependencies": {
-    "@base44/sdk": "^0.8.3",
-    "@base44/vite-plugin": "^0.2.15",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -95,6 +96,10 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
-    "vite": "^6.1.0"
-  }
+    "vite": "^6.1.0",
+    "concurrently": "^9.1.2",
+    "electron": "^33.2.1",
+    "wait-on": "^8.0.1"
+  },
+  "main": "electron/main.cjs"
 }
