--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "baseline-browser-mapping": "^2.8.32",
+    "concurrently": "^9.1.2",
+    "electron": "^33.2.1",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -96,9 +98,8 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.55.0",
     "vite": "^6.1.0",
-    "concurrently": "^9.1.2",
-    "electron": "^33.2.1",
     "wait-on": "^8.0.1"
   },
   "main": "electron/main.cjs"
